OTV_닉네임님환영합니다_구현

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <div class="main-header">
-        <p class="my-info">00님 환영합니다.</p>
+        <p class="my-info">{{ user_info['nickname'] }}님 환영합니다.</p>
         <button onclick="sign_out()" type="button">로그아웃</button>
     </div>
 
