--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <button onclick="sign_out()" type="button" class='logout-btn'>로그아웃</button>
     </div>
 
-    <div class="title-box">
+    <div class="title-box-main">
         <h1 class="title-text">
             오툰뷰
         </h1>
