--- a/templates/index.html
+++ b/templates/index.html
@@ -103,12 +103,12 @@
                         <div class="likes-btn-wrap">
                             {% if check_like == false %}
                                 <button class="likes like-btn" type="button"
-                                        data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o heart"
+                                        data-id={{ id }} onclick="event.preventDefault(); toggle_like({{ id }})"><i class="fa fa-heart-o heart"
                                                                                             aria-hidden="true"></i>
                                 </button>
                             {% else %}
                                 <button class="likes dislike-btn" type="button"
-                                        data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart heart"
+                                        data-id={{ id }} onclick="event.preventDefault(); toggle_like({{ id }})"><i class="fa fa-heart heart"
                                                                                             aria-hidden="true"></i>
                                 </button>
                             {% endif %}
