--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,7 @@ body {
 .main-header .my-info {
     display: flex;
     align-items: center;
+    margin-top: 15px;
 }
 
 .logout-btn{
@@ -92,13 +93,33 @@ body {
 
 /*}*/
 
-.toprank-item,
+.toprank-item{
+    background-color: white;
+    -webkit-transform:scale(1);
+    -moz-transform:scale(1);
+    -ms-transform:scale(1);
+    -o-transform:scale(1);
+    transform:scale(1);
+    -webkit-transition:.3s;
+    -moz-transition:.3s;
+    -ms-transition:.3s;
+    -o-transition:.3s;
+    transition:.3s;
+}
+
+.toprank-item:hover{
+    -webkit-transform:scale(1.1);
+    -moz-transform:scale(1.1);
+    -ms-transform:scale(1.1);
+    -o-transform:scale(1.1);
+    transform:scale(1.1);
+}
+
 .webtoon-all-item {
     background-color: white;
     transition: box-shadow 300ms ease-in-out;
 }
 
-.toprank-item:hover,
 .webtoon-all-item:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -116,8 +137,10 @@ body {
 }
 
 .toprank-detail {
-    height: 100px;
+    height: 50px;
     display: flex;
+    font-size: 25px;
+    margin-top: 10px;
 }
 
 .ico-best {
@@ -184,4 +207,24 @@ body {
 
 .likes-count {
     width: 100%;
+}
+
+.sample_image  img {
+    -webkit-transform:scale(1);
+    -moz-transform:scale(1);
+    -ms-transform:scale(1);
+    -o-transform:scale(1);
+    transform:scale(1);
+    -webkit-transition:.3s;
+    -moz-transition:.3s;
+    -ms-transition:.3s;
+    -o-transition:.3s;
+    transition:.3s;
+}
+.sample_image:hover img {
+    -webkit-transform:scale(1.2);
+    -moz-transform:scale(1.2);
+    -ms-transform:scale(1.2);
+    -o-transform:scale(1.2);
+    transform:scale(1.2);
 }
