--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -23,16 +23,34 @@
 .detail-box {
     display: flex;
 }
-.detail-image {
+.detail-side {
     width: 40%;
     height: 320px;
     display: flex;
+    flex-direction: column;
+}
+.detail-image {
+    width: 100%;
+    height: 280px;
+    display: flex;
     justify-content: center;
+    align-items: flex-end;
+}
+.likes-container {
+    /*display: flex;*/
+    /*justify-content: center;*/
+    height: 40px;
+    display: flex;
     align-items: center;
+    justify-content: center;
+}
+.likes-box {
+    width: 100px;
+
 }
 .detail {
     width: 60%;
-    height: 320px;
+    /*height: 320px;*/
 }
 
 
@@ -72,38 +90,49 @@
 .title-box {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+    /*gap: 30px;*/
 /*    line-height: 40px;*/
 /*    height: 40px;*/
     padding: 50px;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
 }
-.title {
-    var(--font-size-lg);
-    line-height: 30px;
+.title-detail {
+    font-size: 30px;
+    /*var(--font-size-title);*/
+    /*line-height: 30px;*/
+    /*margin-bottom: 0px;*/
+}
+.sub-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 .author {
-    var(--font-sizw-md);
-    line-height: 30px;
+    /*var(--font-sizw-md);*/
+    /*line-height: 30px;*/
+    /*padding-top: 15px;*/
+    /*padding-right: 20px;*/
+    padding-left: 50px;
 }
+
 .genre {
-    var(--font-size-sm);
+    /*var(--font-size-sm);*/
     /*    line-height: 20px;*/
 /*    height: 20px;*/
-    padding-left: 50px;
     color: gray;
 }
 .summary {
     var(--font-size-md);
     padding: 50px;
-    height: 140px;
+    padding-top: 30px;
+    /*height: 140px;*/
     font-size: 18px;
     line-height: 22px;
 /*    width: 80%;*/
 }
-.likes-container {
-    padding-left: 50px;
-}
+
 .heart {
     color: red;
 }
@@ -196,10 +225,7 @@
     padding: 30px;
 }
 .review-text {
-
-}
-.review-btn {
-    padding: 30px;
+    margin-bottom: 0px;
 }
 .delete {
     background-color: #90caf9;
