--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
 
     <script>
 
-        function login_blur() {
+            function login_blur() {
             console.log("onblur 실행완료")
             $("#login-box").removeClass("is-white is-shadow").addClass("is-blue")
             $("#input-username").removeClass("is-white auto-input").addClass("is-blue off-auto-complete")
@@ -93,39 +93,42 @@
 
 </head>
 <body>
-    <section class="longin-header">
-        <div class="title-box">
-            <h1 class="title title-font">오 툰 뷰</h1>
-            <h3 class="subtitle title-font">웹툰, 무엇이든 추천해드립니다.</h3>
-        </div>
-    </section>
-    <section class="login-section">
-        <div class="login-container">
-            <div id="login-box" class="box is-blue">
-                <div class="id-box control has-icons-left is-blue"> <!--아이디-->
-                    <input onblur="login_blur()" onfocus="login_focus()" id="input-username" class="id-input is-blue" type="text" placeholder="아이디">
-                    <span class="icon is-small is-left"><i class="fa fa-user is-blue"></i></span>
-                </div>
-                <div class="password-box control has-icons-left is-blue">
-                    <input onblur="login_blur()" onfocus="login_focus()" id="input-password" class="password-input is-blue" type="password" placeholder="비밀번호">
-                    <span class="icon is-small is-left"><i class="fa fa-lock is-blue"></i></span>
-                </div>
-                <div id="sign-in-or-up-box" class="has-text-centered">
-                    <nav class="level is-mobile">
-                        <button id="login-btn" class="level-item open-login-button is-blue" onclick="sign_in()">
-                            로그인
-                        </button>
-                    </nav>
-                    <hr>
-                    <h4>아직 회원이 아니시라면</h4>
-                    <nav class="level is-mobile">
-                        <button id="login-register-btn" class="level-item open-login-button is-blue" onclick="window.location.href='/join'">회원가입</button>
-                    </nav>
+    <div class="login-wrap">
+        <section class="longin-header">
+            <div class="title-box">
+                <h1 class="title login-title">오 툰 뷰</h1>
+                <h3 class="subtitle login-subtitle">웹툰, 무엇이든 추천해드립니다.</h3>
+            </div>
+        </section>
+        <section class="login-section">
+            <div class="login-container">
+                <div id="login-box" class="box is-blue">
+                    <div class="id-box control has-icons-left is-blue"> <!--아이디-->
+                        <input onblur="login_blur()" onfocus="login_focus()" id="input-username" class="id-input is-blue" type="text" placeholder="아이디">
+                        <span class="icon is-small is-left"><i class="fa fa-user is-blue"></i></span>
+                    </div>
+                    <div class="password-box control has-icons-left is-blue">
+                        <input onblur="login_blur()" onfocus="login_focus()" id="input-password" class="password-input is-blue" type="password" placeholder="비밀번호">
+                        <span class="icon is-small is-left"><i class="fa fa-lock is-blue"></i></span>
+                    </div>
+                    <div id="sign-in-or-up-box" class="has-text-centered">
+                        <nav class="level is-mobile">
+                            <button id="login-btn" class="level-item open-login-button is-blue" onclick="sign_in()">
+                                로그인
+                            </button>
+                        </nav>
+                        <hr>
+                        <h4>아직 회원이 아니시라면</h4>
+                        <nav class="level is-mobile">
+                            <button id="login-register-btn" class="level-item open-login-button is-blue" onclick="window.location.href='/join'">회원가입</button>
+                        </nav>
 
+                    </div>
                 </div>
             </div>
-        </div>
 
-    </section>
+        </section>
+    </div>
+
 </body>
 </html>
