--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,13 +1,15 @@
 /*login*/
-html,
-body{
+html{
+    margin: 0px;
+    padding: 0px;
+}
+.login-wrap{
     background-color: var(--main-color);
     height: 100vh;
     width: 100vw;
     position: relative;
     margin: 0px;
     padding: 0px;
-
 
 }
 
@@ -29,11 +31,13 @@ body{
 
 }
 
-.title,
-.subtitle {
+.login-title,
+.login-subtitle {
     color: var(--main-color);
 
 }
+
+
 
 
 .box{
@@ -48,7 +52,6 @@ body{
     margin-bottom: 3px;
     border-bottom: solid 2px white;
     padding-bottom: 2px;
-
 
 }
 
